# soniscope-jupyter

./: .coveragerc  .gitignore  CITATION.cff  LICENSE  LICENSE.txt  MANIFEST.in  README.md  codecov.yml  dev-logbook.md  ern-stethoscope-demo.md  install.json  jest.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.py  soniscope_jupyter.json  sonivis_lens_widget.json  webpack.config.js
.github/workflows/: build.yml
css/: widget.css
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst  properties.rst  stethoscope-demo.rst
examples/: Graz-Mitte-Gries-Luft.csv  SoniScope-Graz.ipynb  SoniScope-Rad-Deutsch.ipynb  SoniScope.ipynb  bike_day_semantic.csv  introduction.ipynb  prep-demo-data.ipynb
soniscope_jupyter/: __init__.py  _frontend.py  _version.py  lens_widget.py
soniscope_jupyter/nbextension/: extension.js
soniscope_jupyter/tests/: conftest.py  debug.py  test_example.py  test_nbextension_path.py
sonivis_lens_widget/: __init__.py  _frontend.py  _version.py  example.py  lens_widget.py
sonivis_lens_widget/nbextension/: extension.js
sonivis_lens_widget/tests/: conftest.py  test_example.py  test_nbextension_path.py
src/: bubbleDemo.ts  extension.ts  index.ts  lensCursor.ts  plugin.ts  scatterPlot.ts  version.ts  widget.ts
src/__tests__/: index.spec.ts  utils.ts
